Refactored JSON loading sequence.

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "voice":{
-        "directory_path":"C:\\Users\\Alan\\Documents\\Python Scripts\\Discord\\bots\\pong_bot\\.voice_lines",
+        "directory_name":".voice_lines",
         "voice_file_type":"mp3"
     },
-    "commands":{
-        "text_commands":"",
-        "voice_commands":""
+    "command_files":{
+        "text_commands":"text_commands.json",
+        "voice_commands":"voice_commands.json"
     },
     "admins":["kregnax", "wildemxc"]
 }
